--- a/api/composer.json
+++ b/api/composer.json
@@ -37,6 +37,7 @@
         "symfony/ux-turbo": "^2.31",
         "symfony/validator": "7.4.*",
         "symfony/yaml": "7.4.*",
+        "twig/string-extra": "*",
         "vich/uploader-bundle": "*"
     },
     "require-dev": {
