Feat: Complete social interactions, cover image, and admin ban functionality

--- a/api/composer.json
+++ b/api/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "^2.18",
         "doctrine/doctrine-migrations-bundle": "^3.7",
         "doctrine/orm": "^3.6",
+        "liip/imagine-bundle": "^2.16",
         "meilisearch/meilisearch-php": "^1.16",
         "nelmio/cors-bundle": "^2.6",
         "phpdocumentor/reflection-docblock": "^5.6",
