--- a/api/config/packages/vich_uploader.yaml
+++ b/api/config/packages/vich_uploader.yaml
@@ -16,3 +16,8 @@ vich_uploader:
             uri_prefix: /uploads/posts
             upload_destination: '%kernel.project_dir%/public/uploads/posts'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+        user_cover:
+            uri_prefix: /uploads/covers
+            upload_destination: '%kernel.project_dir%/public/uploads/covers'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
