--- a/api/composer.json
+++ b/api/composer.json
@@ -27,6 +27,7 @@
         "symfony/form": "7.4.*",
         "symfony/framework-bundle": "7.4.*",
         "symfony/http-client": "7.4.*",
+        "symfony/intl": "7.4.*",
         "symfony/mercure-bundle": "^0.4.2",
         "symfony/property-access": "7.4.*",
         "symfony/property-info": "7.4.*",
