--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -4,6 +4,11 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.csrf_protection_enabled: true
+
+when@test:
+    parameters:
+        app.csrf_protection_enabled: false
 
 services:
     # default configuration for services in *this* file
