--- a/api/composer.json
+++ b/api/composer.json
@@ -35,11 +35,14 @@
         "symfony/security-bundle": "7.4.*",
         "symfony/serializer": "7.4.*",
         "symfony/stimulus-bundle": "^2.31",
+        "symfony/translation": "7.4.*",
         "symfony/twig-bundle": "7.4.*",
         "symfony/ux-turbo": "^2.31",
         "symfony/validator": "7.4.*",
         "symfony/yaml": "7.4.*",
+        "twig/extra-bundle": "^2.12|^3.0",
         "twig/string-extra": "*",
+        "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "*"
     },
     "require-dev": {
