--- a/api/config/packages/framework.yaml
+++ b/api/config/packages/framework.yaml
@@ -5,8 +5,11 @@ framework:
     # Note that the session will be started ONLY if you read or write from it.
     session: true
 
-    #esi: true
-    #fragments: true
+    default_locale: en
+    translator:
+        default_path: '%kernel.project_dir%/translations'
+        fallbacks:
+            - en
 
 when@test:
     framework:
